re PR rtl-optimization/15112 (optimizer generates code to write to unchanging memory)

PR optimization/15112
	* reload1.c (reload): Don't record unchanging memory locations.

From-SVN: r81407